[gd_scene load_steps=10 format=3 uid="uid://c20jfbir25nk4"]

[ext_resource type="Script" uid="uid://cii17ctplkach" path="res://scripts/menus/main_menu.gd" id="1_iopmd"]
[ext_resource type="AudioStream" uid="uid://d8owusf5kta3" path="res://backup/resources/audio/open_music.mp3" id="2_4xc5i"]
[ext_resource type="Texture2D" uid="uid://mif747q10q22" path="res://assets/ui/ui_main_mail.png" id="6_xacg5"]
[ext_resource type="Texture2D" uid="uid://cbgayxyflsgnc" path="res://assets/ui/main_ui_set.png" id="7_yc4ry"]
[ext_resource type="Texture2D" uid="uid://dsqaudssf2vs0" path="res://assets/ui/ui_main_quit.png" id="8_v0p7g"]
[ext_resource type="Texture2D" uid="uid://c18nq4db2fask" path="res://assets/ui/game_title.png" id="9_q3mkr"]
[ext_resource type="Texture2D" uid="uid://cs3jhmo1u40o2" path="res://assets/ui/title_text.png" id="10_k2ysm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gsjvs"]
bg_color = Color(0.192157, 0.192157, 0.192157, 0.862745)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.176471)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.294118)
shadow_size = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0p2m"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.862745)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.176471)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.294118)
shadow_size = 8
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iopmd")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autoplay = true
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4xc5i")
autoplay = true

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.144
anchor_right = 0.5
anchor_bottom = 0.419
offset_left = -726.0
offset_top = 71.48
offset_right = 517.0
offset_bottom = 322.48
grow_horizontal = 2
pivot_offset = Vector2(400, 125)
texture = ExtResource("9_q3mkr")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 0.95
offset_left = -82.0
offset_top = -158.0
offset_right = -94.3999
offset_bottom = -172.8
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
texture_normal = ExtResource("10_k2ysm")
ignore_texture_size = true
stretch_mode = 5

[node name="AnnouncementButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.11
offset_left = -87.4
offset_top = 586.0
offset_right = -56.52
offset_bottom = 621.12
grow_horizontal = 0
size_flags_horizontal = 8
texture_normal = ExtResource("6_xacg5")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.15
anchor_right = 0.98
anchor_bottom = 0.21
offset_left = -88.4
offset_top = 608.2
offset_right = -54.52
offset_bottom = 632.32
grow_horizontal = 0
size_flags_horizontal = 8
texture_normal = ExtResource("7_yc4ry")
ignore_texture_size = true
stretch_mode = 5

[node name="QuitButton" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_top = 0.25
anchor_right = 0.98
anchor_bottom = 0.31
offset_left = -88.4
offset_top = 631.4
offset_right = -57.52
offset_bottom = 648.52
grow_horizontal = 0
size_flags_horizontal = 8
texture_normal = ExtResource("8_v0p7g")
ignore_texture_size = true
stretch_mode = 5

[node name="AnnouncementPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gsjvs")

[node name="Title" type="Label" parent="UI/AnnouncementPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 20.0
offset_right = 125.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "公告栏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="RichTextLabel" parent="UI/AnnouncementPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
text = "欢迎来到《代号：上班》！

本游戏正在开发中，敬请期待更多内容。

开发团队将在此处发布游戏更新公告和活动信息。"

[node name="CloseButton" type="Button" parent="UI/AnnouncementPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "关闭"

[node name="SettingsPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c0p2m")

[node name="Title" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 20.0
offset_right = 125.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.23
anchor_right = 0.4
anchor_bottom = 0.31
offset_top = 40.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "音量："

[node name="VolumeSlider" type="HSlider" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.31
offset_top = 40.0
offset_bottom = 40.0
value = 80.0

[node name="FullscreenLabel" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.37
anchor_right = 0.48
anchor_bottom = 0.45
offset_top = 40.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "全屏模式："

[node name="FullscreenCheck" type="CheckBox" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.37
anchor_right = 0.52
anchor_bottom = 0.45
offset_left = 30.0
offset_top = 40.0
offset_right = 30.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)

[node name="FontSettingsLabel" type="Label" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.51
anchor_right = 0.48
anchor_bottom = 0.59
offset_top = 40.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "字体设置："

[node name="FontSettingsButton" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.51
anchor_right = 0.7
anchor_bottom = 0.59
offset_left = 30.0
offset_top = 40.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 16
disabled = true
text = "调整字体大小"

[node name="ConfirmButton" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "确认"

[node name="CancelButton" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -60.0
offset_right = 110.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "取消"
